--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: blank # the website title (if blank, full name will be used instead)
+title: Zhenshan Bing's webpage # the website title (if blank, full name will be used instead)
 first_name: Zhenshan
-middle_name: R.
+middle_name: 
 last_name: Bing
 email: zhenshan.bing@tum.de
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
