--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # -----------------------------------------------------------------------------
 
 title: Zhenshan Bing's webpage # the website title (if blank, full name will be used instead)
-first_name: Zhenshan Test
+first_name: Zhenshan
 middle_name: 
 last_name: Bing
 email: zhenshan.bing@tum.de
