--- a/_config.yml
+++ b/_config.yml
@@ -84,8 +84,10 @@ wikidata_id: # your wikidata id
 dblp_url: # your DBLP profile url
 stackoverflow_id: #your stackoverflow id
 
-contact_note: >
-  You can even add a little note about which of these is the best way to reach you.
+# contact_note: >
+#   You can even add a little note about which of these is the best way to reach you.
+
+<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=080808&w=a&t=tt&d=TS_RSqlWck-8Fvk_1h7RcwL9LyxO0JZhNyyHyJygIxM&co=ffffff&cmo=3acc3a&cmn=ff5353&ct=808080'></script>
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
