--- a/_config.yml
+++ b/_config.yml
@@ -128,7 +128,7 @@ external_sources:
 # -----------------------------------------------------------------------------
 
 collections:
-  news:
+  Latest news:
     defaults:
       layout: post
     output: true
