--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ repo_theme_dark: dark           # https://github.com/anuraghazra/github-readme-s
 # will use title and url fields
 # Take a look to https://github.com/jekyll/jekyll-feed for more customization
 
-rss_icon: true
+rss_icon: false
 
 # -----------------------------------------------------------------------------
 # Layout
@@ -70,8 +70,8 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 github_username: # your GitHub user name
 gitlab_username: # your GitLab user name
 twitter_username: # your Twitter handle
-linkedin_username: zhenshan-bing-08b92570 # your LinkedIn user name
-scholar_userid: eIz0XvMAAAAJ # your Google Scholar ID
+# linkedin_username: zhenshan-bing-08b92570 # your LinkedIn user name
+# scholar_userid: eIz0XvMAAAAJ # your Google Scholar ID
 orcid_id: # your ORCID ID
 medium_username: # your Medium username
 quora_username: # your Quora username
