--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: Zhenshan Bing's webpage # the website title (if blank, full name will be 
 first_name: Zhenshan
 middle_name: 
 last_name: Bing
-email: zhenshan.bing@tum.de
+# email: zhenshan.bing@tum.de
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
