--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,16 @@ footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
 keywords: jekyll, jekyll-theme, academic-website, portfolio-website  # add your own keywords or leave empty
 
-lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
+# lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
+
+lang:
+  en:
+    label: "English"
+    locale: en
+  zh-CN:
+    label: "简体中文"
+    locale: zh-CN
+
 icon: ⚛️  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://zhenshan-bing.github.io # the base hostname & protocol for your site
