--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,8 +21,8 @@ jobs:
       with:
         ruby-version: '3.0.2'
         bundler-cache: true
-    - name: Update Bundler
-        run: gem install bundler && bundle update --bundler
+    # - name: Update Bundler
+    #     run: gem install bundler && bundle update --bundler
     - name: Install deps
       run: |
         npm install -g mermaid.cli
